[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name="hotpdf"
version="0.4.1.2"
authors = [
  {name = "Krishnasis Mandal", email = "krishnasis.mandal@prestatech.com"}]
maintainers = [
  {name = "Mattia Callegari" , email = "callegari.mattia@protonmail.com"},
  {name = "Alex Ptakhin" , email = "alex.ptakhin@prestatech.com"}]
description = "Fast PDF Data Extraction library"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: General",
  "Topic :: Text Processing :: Indexing",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Utilities",
  "Operating System :: OS Independent",
]
keywords = [
  "pdf",
  "data extraction",
  "text extraction",
  "hotpdf",
  "pdfminer",
  "pdfquery"
]

dependencies = [
    "pdfminer.six==20231228",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["hotpdf*"]
exclude = ["docs*", "tests*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-xdist", "pylint", "mypy", "typing-extensions", "pre-commit", "ruff"]

[tool.ruff]
indent-width = 4
line-length = 120
select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # MaccaBe
    "C901",
    # Pep8-naming
    #"N", # TODO: enable
]
fix = true
fixable = ["ALL"]
exclude = ["docs"]
preview = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
warn_unused_configs = true
files = "hotpdf"
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
warn_unreachable = true
warn_redundant_casts = true
strict = true

[tool.pytest.ini_options]
log_cli=true
log_level="NOTSET"
